faster (issue185): Changed getter and setter methods for UserPreferences list refresh times so that callers need not pass any parameters in.